fyrsta verkefnið skráð

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic20.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic11.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ljósmyndir</h2>
@@ -176,18 +176,17 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<h3>Heimilisfang</h3>
+											<span>Múlavegi 2<br />
+											104 Reykjavík</span>
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<h3>Netfang</h3>
+											<a href="#">bla@bla.is</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>411-5900</span>
 										</li>
 										<li>
 											<h3>Social</h3>
