--- a/ferilskra.html
+++ b/ferilskra.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Heim</a></li>
 						<li><a href="ferilskra.html" class="active">Ferilskrá</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
 			</header>
