--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="/images/pic21.JPG" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/pic21.JPG" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Um mig</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="/images/pic11.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic11.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ljósmyndir</h2>
@@ -72,7 +72,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="/images/pic24.JPG" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic24.JPG" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Áhugaverðir tenglar</h2>
