--- a/ferilskra.html
+++ b/ferilskra.html
@@ -37,6 +37,8 @@
                             <h2>Menntun</h2>
 							<h3>B.Sc. í vélaverkfræði, <i>Háskóli Íslands</i></h3>
                             <p><b>2018 - 2021</b> Þriðja árs nemi í vélaverkfræði við Háskóla Íslands.</p>
+                            <h3>Skiptinám, <i>Danmarks Tekniske Universitet</i></h3>
+                            <p><b>Haustönn 2020</b> Stundaði skiptinám við DTU í eina önn.</p>
                             <h3>Stúdentspróf, <i>Menntaskólinn í Reykjavík</i></h3>
                             <p><b>2014 - 2018</b> Útskrifaðist úr eðlisfræðideild II.</p>
                             <h2>Starfsreynsla</h2>
