--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<h3>Framleiðsluferli</h3>
 									<p>Vor 2021.</p>
                                     <ul class="actions">
-								<li><a href="vefsida.html" class="button">Skoða</a></li>
+								<li><a href="framleidsluferli.html" class="button">Skoða</a></li>
 							 </ul>
 								</section>
 								<section>
