--- a/3dprentun.html
+++ b/3dprentun.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Framleiðsluferli</title>
+		<title>Verkefni III - 3D prentun og skönnun</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Heim</a></li>
-						<li><a href="framleidsluferli.html" class="active">Framleiðsluferli</a></li>
+						<li><a href="laserskurdur.html" class="active">3D prentun og skönnun</a></li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
 				</nav>
@@ -32,15 +32,16 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-                            <h1 class="major">Framleiðsluferli</h1>
-							<span class="image fit"><img src="images/KERF/Framleidsluferli-8.jpg" alt="" /></span>
-                            <h2>Verkefnalisti</h2>
-                            <ul>
-						<li><a href="vefsida.html">Vefsíðugerð</a></li>
-						<li><a href="kerf.html" class="active">KERF-próf</a></li>
-						<li><a href="laserskurdur.html">Laserskurður</a></li>
-                        <li><a href="3dprentun.html">3D prentun og skönnun</a></li>
-					</ul>
+                            <h1 class="major">Verkefni III - 3D prentun og skönnun (í vinnslu)</h1>
+							<span class="image fit"><img src="images/laser/IMG_5814.jpg" alt="" /></span>
+                            <h2>1. hluti - Prentaraprófun</h2>
+                            <p>Framkvæmt var prentunarpróf í Fab Lab...</p>
+                            <h2>2. hluti - 3D prentun</h2>
+                            <p>Hönnuð var mótorfesting úr plasti til að passa inn í koltrefjastöng fyrir dróna. Svavar í 3D prentun var fenginn til þess að prenta...</p>
+                            <span class="image fit"><img src="images/laser/assem.png" alt="" /></span>
+                            <h2>3. hluti - 3D skönnun</h2>
+                            <p>Notað var appið Qlone til að skanna inn smástyttu. Byrjað var á því að prenta blað skaffað af Qlone til að nota sem nokkurs konar bakgrunn fyrir skönnunina. Stytta var valin til að skanna inn og leiðbeiningum forritsins fylgt. Útkoman var ansi nákvæm. Sjá gif að neðan...</p>
+                            
 						</div>
 					</section>
 
