myndir og urbaetur

--- a/3dprentun.html
+++ b/3dprentun.html
@@ -32,16 +32,40 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-                            <h1 class="major">Verkefni III - 3D prentun og skönnun (í vinnslu)</h1>
-							<span class="image fit"><img src="images/laser/IMG_5814.jpg" alt="" /></span>
+                            <h1 class="major">Verkefni III - 3D prentun og skönnun</h1>
+							<div class="box alt">
+										<div class="row gtr-uniform">	
+											<div class="col-6"><span class="image fit"><img src="images/3dprentun/D61AE135-97CE-4106-B1EA-B2449C6A5E67-7780-000004E7AA2DEA9E.JPG" alt="" /></span></div>
+                                            <div class="col-6"><span class="image fit"><img src="images/KERF/Framleidsluferli-12.jpg" alt="" /></span></div>
+										</div>
+									</div>
                             <h2>1. hluti - Prentaraprófun</h2>
-                            <p>Framkvæmt var prentunarpróf í Fab Lab...</p>
-                            <h2>2. hluti - 3D prentun</h2>
-                            <p>Hönnuð var mótorfesting úr plasti til að passa inn í koltrefjastöng fyrir dróna. Svavar í 3D prentun var fenginn til þess að prenta...</p>
-                            <span class="image fit"><img src="images/laser/assem.png" alt="" /></span>
-                            <h2>3. hluti - 3D skönnun</h2>
-                            <p>Notað var appið Qlone til að skanna inn smástyttu. Byrjað var á því að prenta blað skaffað af Qlone til að nota sem nokkurs konar bakgrunn fyrir skönnunina. Stytta var valin til að skanna inn og leiðbeiningum forritsins fylgt. Útkoman var ansi nákvæm. Sjá gif að neðan...</p>
+                            <p>Til að kynnast þeim þrívíddarprenturum sem eru til afnota í Fab Lab Reykjavík var framkvæmt lítið prentarapróf. Þetta var gert í þeim tilgangi að geta betur metið eiginleika hvers prentara og sjá hvenær prentarinn var í vandræðum með að prenta. Fundið var ákveðið próf á netinu til að prenta og hlaðið niður sem stl-skrá. Prófið reynir á ýmis átriði sem geta valdið erfiðleikum í prentun, t.d. mikill halli, skarpar brúnir o.fl. Stl-skráin var sett í slicer og svo var prentun hafin í Prusa-prentaranum með PLA-plasti. Prentun tók nokkrar klukkustundir en kom furðulega vel út m.v. opinn prentara í rými þar sem mikil hreyfing er á lofti. Verping var ekki áberandi og sást bara þar sem hallinn var mikill.</p>
+                            <div class="box alt">
+										<div class="row gtr-uniform">	
+											<div class="col-6"><span class="image fit"><img src="images/KERF/Framleidsluferli-11.jpg" alt="" /></span></div>
+											<div class="col-6"><span class="image fit"><img src="images/KERF/Framleidsluferli-12.jpg" alt="" /></span></div>
+										</div>
+									</div>
                             
+                            <h2>2. hluti - 3D prentun</h2>
+                            <p>Hönnuð var mótorfesting úr plasti til að passa inn í koltrefjastöng fyrir dróna. Solidworks var notað og hönnun hlutarins miðar við að hægt sé að þrívíddarprenta hann. Gert var ráð fyrir 0,2 mm vikmálum og engar áhættur voru teknar við hönnun þ.e.a.s. nánast hver einasti þrívíddarprentari gæti prentað þennan hlut án nokkurra vandræða. Einstaklega erfitt væri að framleiða þennan part í fræsi en þó mögulegt.</p>
+                            <div class="box alt">
+										<div class="row gtr-uniform">	
+											<div class="col-6"><span class="image fit"><img src="images/3dprentun/isometrisk.png" alt="" /></span></div>
+											<div class="col-6"><span class="image fit"><img src="images/3dprentun/fallmyndir.png" alt="" /></span></div>
+										</div>
+									</div>
+                            <p>Haft var samband við Svavar í 3D prentun og prentaði hann þetta stykki í Ultimaker prentara. Hann sá um að setja stl-skrána úr Solidworks í slicer og af stað í prentun. PLA-plast var notað og nokkuð gróf upplausn. Prentunin kom vel út og þau vikmál sem miðað var við voru heppileg. Allt smelltist þétt saman og reyndist þetta vera þokkaleg hönnun á mótorfestingu fyrir þessa koltrefjastöng. Hönnunin verður bætt og stykkið prentað aftur í náinni framtíð.</p>
+                            <div class="box alt">
+										<div class="row gtr-uniform">	
+											<div class="col-6"><span class="image fit"><img src="images/3dprentun/D1F013EA-7751-435C-A975-F0547001B80E-7780-000004E7C399DD15.JPG" alt="" /></span></div>
+											<div class="col-6"><span class="image fit"><img src="images/3dprentun/9C4DD129-BBB1-40DC-ABD7-B90B31BB4DA0-7780-000004E78A687021.JPG" alt="" /></span></div>
+										</div>
+									</div>
+                            <h2>3. hluti - 3D skönnun</h2>
+                            <p>Notað var appið Qlone til að skanna inn smástyttu. Byrjað var á því að prenta blað skaffað af Qlone til að nota sem nokkurs konar bakgrunn fyrir skönnunina. Fyrst var reynt að skanna brúsa af kveikjarabensíni en það glampaði of mikið á hann og skönnunin varð bjöguð. Stytta var valin næst til að skanna inn og leiðbeiningum forritsins fylgt. Útkoman var ansi nákvæm. Sjá gif að neðan.</p>
+                            <div class="col-6"><span class="img fit"><img src="images/3dprentun/161251287_136356971655300_6862764914754068401_n.gif" alt="" /></span></div>               
 						</div>
 					</section>
 
