--- a/framleidsluferli.html
+++ b/framleidsluferli.html
@@ -40,6 +40,8 @@
 						<li><a href="kerf.html" class="active">KERF-próf</a></li>
 						<li><a href="laserskurdur.html">Laserskurður</a></li>
                         <li><a href="3dprentun.html">3D prentun og skönnun</a></li>
+                        <li><a href="fraesa.html">Að fræsa eitthvað stórt</a></li>
+                        <li><a href="mot.html">Að fræsa út mót</a></li>
 					</ul>
 						</div>
 					</section>
